<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_activity_main_search"
        android:icon="@drawable/baseline_search_white_24"
        app:showAsAction="ifRoom"
        android:title="@string/navigation_drawer_search">
    </item>
    <item
        android:id="@+id/menu_activity_main_settings"
        android:icon="@drawable/baseline_more_vert_white_24"
        app:showAsAction="always"
        android:title="@string/navigation_drawer_settings">

        <menu>

            <item
                android:id="@+id/menu_activity_main_notifs"
                app:showAsAction="ifRoom"
                android:title="@string/navigation_drawer_notifications"
                />
            <item
                android:id="@+id/menu_activity_main_help"
                app:showAsAction="ifRoom"
                android:title="@string/navigation_drawer_help"
                />
            <item
                android:id="@+id/menu_activity_main_about"
                app:showAsAction="ifRoom"
                android:title="@string/navigation_drawer_about"
                />

        </menu>
    </item>
</menu>