<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deguffroy.adrien.mynews.Controllers.Fragments.MainFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</android.support.v4.widget.SwipeRefreshLayout>
